Fixing the Gradle build for Java 14 & JUnit 5