@@ -2,7 +2,7 @@ plugins {
     id 'java'
 }
 
-group 'org.example'
+group 'com.mechanitis'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 14
@@ -12,10 +12,16 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.6.0'
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.6.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-api:5.6.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.6.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.2.0'
 }
 
 tasks.withType(JavaCompile).each {
     it.options.compilerArgs.add('--enable-preview')
+}
+
+test {
+    jvmArgs '--enable-preview'
+    useJUnitPlatform()
 }
